# skodaconnect

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
example/: example.py
skodaconnect/: __init__.py  __version__.py  connection.py  const.py  vehicle.py
skodaconnect/_OLD_/: connection.py  const.py  dashboard.py  exceptions.py  utilities.py  vehicle.py
skodaconnect/api/: __init__.py
skodaconnect/api/base/: __init__.py  client.py
skodaconnect/api/connect/: client.py
skodaconnect/api/mbb/: client.py  const.py
skodaconnect/api/technical/: __init__.py  client.py  const.py
skodaconnect/helpers/: html.py
